--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,14 @@
   border: 2px solid red;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Audiowide&family=Inter:wght@300&family=Satisfy&family=Ultra&family=Unbounded:wght@300&display=swap');
 *{
   font-family: 'Inter', sans-serif;
+}
+.satisfy-font{
+  font-family: 'Satisfy', cursive;
+}
+.audio-fs{
+  font-family: 'Audiowide', cursive;
+
 }
