Fixed some display issues
- Made Navbar static instead of fixed to top of the screen
- Adjust background gradient pattern for navbar with pages
- Add About Page

--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -1,6 +1,6 @@
 #navbar {
     height: 20vh;
-    background-color: transparent;;
+    // background-color: #FFFFFF;
 
     &>nav {
         height: inherit;
